tests/purs/failing/3689.purs
-- @shouldFailWith ErrorParsingModule
module Main where

test =
  { "bad"
  }
